# yakari

./: .gitmodules  README.md  README.org  pyproject.toml
.github/workflows/: python-publish.yml  python-test.yml
configurations/: demo.toml  git.toml  uv.toml
pytransient/: action.py  app.css  app.py  cli.py  command.py  config.py  constants.py  core.py  models.py  rich_render.py  state_machine.py  types.py  ui.py  vertical_layout.css
pytransient/configurations/: git.toml  uv.py
test/: conftest.py  test_app.py  test_types.py
yakari/: app.css  app.py  cli.py  constants.py  generator.py  rich_render.py  types.py
yakari/configurations/: _base.py  uv.py
yakari/screens/: __init__.py  choice_argument.py  menu.py  results.py  value_argument.py
yakari/widgets/: __init__.py  argument_input.py  command_runner.py  footer.py  suggestions.py  tags.py
