[project]
name = "yakari"
version = "0.1.0"
description = "Interactive command building tool."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9.2",
    "rich>=13.9.4",
    "textual>=0.86.1",
    "tomlkit>=0.13.2",
]

[project.scripts]
ykr = "yakari.cli:main"

[dependency-groups]
dev = [
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "python-lsp-ruff>=2.2.2",
    "python-lsp-server[all]>=1.12.0",
    "ruff>=0.7.4",
    "textual-dev>=1.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
